--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
 		<meta name="format-detection" content="telephone=no">
-		<meta name="viewport" content="width=device-width, height=device-height, initial-scale=0.5, maximum-scale=0.5, target-densitydpi=device-dpi, user-scalable=no">
+		<meta name="viewport" content="width=device-width, height=device-height, initial-scale=0.5, maximum-scale=2.0, target-densitydpi=device-dpi, user-scalable=yes">
 
 		<link rel="stylesheet" type="text/css" href="framer/style.css">
 
